--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
-python-telegram-bot==20.6
-python-dotenv==1.0.0
-requests==2.31.0
+python-telegram-bot==20.7
+requests
+python-dotenv
+Pillow
+pytesseract
+pdf2image
