--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-python-telegram-bot==20.7
-requests
-python-dotenv
-Pillow
-pytesseract
-pdf2image
+python-telegram-bot>=20.0
+python-dotenv>=1.0
+pillow>=9.0
+pytesseract>=0.3
+PyMuPDF>=1.21
+pdf2image>=1.16
+python-docx>=0.8
+openpyxl>=3.1
+gigachat>=0.1.0
