--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,10 @@
-python-telegram-bot>=20.0
-python-dotenv>=1.0
-pillow>=9.0
-pytesseract>=0.3
-PyMuPDF>=1.21
-pdf2image>=1.16
-python-docx>=0.8
-openpyxl>=3.1
-gigachat>=0.1.0
-fitz  # PyMuPDF
-docx 
-openpyxl
-pdf2image
-
+python-telegram-bot==20.7
+python-dotenv==1.0.0
+pillow==10.1.0
+pytesseract==0.3.10
+PyMuPDF==1.23.8
+pdf2image==1.16.3
+python-docx==1.1.0
+openpyxl==3.1.2
+gigachat==0.1.11
+requests==2.31.0
